Load whole library returns an instance of LibraryObject, doesn't sets it directly
moved all objects management to LibraryObject class;
removed debug from locator;
movead all library loading related methods to new loader  module;
removed business logic from index.js;
move all root methods and variables to environment module;
created config module;

--- a/example/index.html
+++ b/example/index.html
@@ -28,7 +28,7 @@
         lib3d.init(document.getElementById("LIBRARY"), 300, 300);
         lib3d.addLoop(lib3d.navigation.update);
 
-        lib3d.load({
+        lib3d.loadLibrary({
             model: "library_0001",
             sections: [
                 {
@@ -55,6 +55,9 @@
                     ]
                 }
             ]
+        })
+        .then(function (library) {
+            lib3d.setLibrary(library);
         });
     </script>
 </body>
