--- a/example/index.html
+++ b/example/index.html
@@ -19,6 +19,7 @@
         <li><button onmousedown="lib3d.navigation.goBackward()">backward</button></li>
         <li><button onmousedown="lib3d.navigation.goUp()">up</button></li>
         <li><button onmousedown="lib3d.navigation.goDown()">down</button></li>
+        <li><button onmousedown="createLibrary()">Create Library</button></li>
     </ul>
 
     <script src="http://localhost:8081/vendors.js"></script>
@@ -59,6 +60,61 @@
         .then(function (library) {
             lib3d.setLibrary(library);
         });
+
+        function createLibrary() {
+            lib3d.factory.createLibrary({model: 'library_0002'})
+                .then(function (library) {
+                    lib3d.setLibrary(library);
+                })
+                .then(createSection)
+                .then(createBooks);
+        }
+
+        function createSection() {
+            return lib3d.factory.createSection({id: '3', model: 'bookshelf_0001'})
+                .then(function (section) {
+                    lib3d.getLibrary().addSection(section);
+                    section.position.set(-0.3, 0,-2);
+                });
+        }
+
+        function createBooks() {
+            return createBook({
+                model: 'book_0001', 
+                shelfId: '4', 
+                sectionId: '3',
+                pos_x: -0.1,
+                pos_y: -0.07,
+                pos_z: -0.05
+            })
+            .then(function () {
+                return createBook({
+                    model: 'book_0002', 
+                    shelfId: '4', 
+                    sectionId: '3',
+                    pos_x: -0.0,
+                    pos_y: -0.07,
+                    pos_z: -0.05
+                });
+            })
+            .then(function () {
+                return createBook({
+                    model: 'book_0003', 
+                    shelfId: '4', 
+                    sectionId: '3',
+                    pos_x: 0.1,
+                    pos_y: -0.07,
+                    pos_z: -0.05
+                })
+            });
+        }
+
+        function createBook(dto) {
+            return lib3d.factory.createBook(dto)
+                .then(function (book) {
+                    return lib3d.getLibrary().addBook(book);
+                });
+        }
     </script>
 </body>
 </html>
