--- a/example/index.html
+++ b/example/index.html
@@ -62,54 +62,35 @@
         });
 
         function createLibrary() {
-            lib3d.factory.createLibrary({model: 'library_0002'})
-                .then(function (library) {
-                    lib3d.setLibrary(library);
-                })
-                .then(createSection)
-                .then(createBooks);
-        }
-
-        function createSection() {
+            var library = lib3d.factory.createLibrary({model: 'library_0002'});
             var section = lib3d.factory.createSection({id: '3', model: 'bookshelf_0001'})
-
-            lib3d.getLibrary().addSection(section);
-            section.position.set(-0.3, 0,-2);
-        }
-
-        function createBooks() {
-            var library = lib3d.getLibrary();
-            
             var book1 = lib3d.factory.createBook({
                 model: 'book_0001', 
                 shelfId: '4', 
-                sectionId: '3',
-                pos_x: -0.1,
-                pos_y: -0.07,
-                pos_z: -0.05
+                sectionId: '3'
             });
-
             var book2 = lib3d.factory.createBook({
                 model: 'book_0002', 
                 shelfId: '4', 
-                sectionId: '3',
-                pos_x: -0.0,
-                pos_y: -0.07,
-                pos_z: -0.05
+                sectionId: '3'
             });
-
             var book3 = lib3d.factory.createBook({
                 model: 'book_0003', 
                 shelfId: '4', 
-                sectionId: '3',
-                pos_x: 0.1,
-                pos_y: -0.07,
-                pos_z: -0.05
+                sectionId: '3'
             });
 
+            section.position.set(-0.3, 0, -2);
+            book1.position.set(-0.1, -0.07, -0.05);
+            book2.position.set(0.0, -0.07, -0.05);
+            book3.position.set(0.1, -0.07, -0.05);
+
+            library.addSection(section);
             library.addBook(book1);
             library.addBook(book2);
             library.addBook(book3);
+
+            lib3d.setLibrary(library);
         }
     </script>
 </body>
