--- a/index.html
+++ b/index.html
@@ -43,39 +43,39 @@
 
 
     <section>
-        <article><p><a href="http://badge.fury.io/gh/Galiaf47%2Flib3d"><img src="https://badge.fury.io/gh/Galiaf47%2Flib3d.svg" alt="GitHub version"></a>
+        <article><p><a href="https://badge.fury.io/js/lib3d"><img src="https://badge.fury.io/js/lib3d.svg" alt="npm version"></a>
 <a href="https://codeship.com/projects/142258"><img src="https://img.shields.io/codeship/dac1bad0-d3da-0133-129e-1e4d5c815c8f/master.svg" alt="Codeship Status for Galiaf47/lib3d"></a>
 <a href="https://doc.esdoc.org/github.com/Galiaf47/lib3d"><img src="https://doc.esdoc.org/github.com/Galiaf47/lib3d/badge.svg" alt="Document"></a>
 <a href="https://coveralls.io/github/Galiaf47/lib3d?branch=master"><img src="https://coveralls.io/repos/github/Galiaf47/lib3d/badge.svg?branch=master" alt="Coverage Status"></a></p>
 <h1>lib3d</h1><p>Display 3D library on your webpage</p>
 <p><img src="https://raw.githubusercontent.com/Galiaf47/lib3d/master/src/img/screenshot.jpg" alt="Screenshot" title="Screenshot"></p>
-<h2>Install</h2><pre class="prettyprint source"><code>npm install lib3d</code></pre><p>Then add lib3d and dependencies to your <code>index.html</code>,
-objects should be added after lib3d:</p>
-<pre class="prettyprint source lang-html"><code>&lt;script src=&quot;https://cdnjs.cloudflare.com/ajax/libs/three.js/r71/three.min.js&quot;>&lt;/script>
-&lt;script src=&quot;/node_modules/lib3d/dist/lib3d.js&quot;>&lt;/script>
-&lt;script src=&quot;/node_modules/lib3d/dist/objects/libraries/library_0001/library_0001.js&quot;>&lt;/script>
-&lt;script src=&quot;/node_modules/lib3d/dist/objects/sections/bookshelf_0001/bookshelf_0001.js&quot;>&lt;/script>
-&lt;script src=&quot;/node_modules/lib3d/dist/objects/books/book_0001/book_0001.js&quot;>&lt;/script></code></pre><p>And add a canvas element to your page</p>
-<pre class="prettyprint source lang-html"><code>&lt;canvas id=&quot;LIBRARY&quot;>&lt;/canvas></code></pre><h2>Basic Usage</h2><pre class="prettyprint source lang-js"><code>// Where textures will be loaded from
-lib3d.setObjectsRoot('https://raw.githubusercontent.com/Galiaf47/lib3d/master/src/objects');
+<h2>Install</h2><pre class="prettyprint source"><code>npm install lib3d</code></pre><p>Add three.js and lib3d to your <code>index.html</code>:</p>
+<pre class="prettyprint source lang-html"><code>&lt;script src=&quot;/node_modules/three/three.min.js&quot;>&lt;/script>
+&lt;script src=&quot;/node_modules/lib3d/dist/lib3d.js&quot;>&lt;/script></code></pre><p>And add a canvas element to your page</p>
+<pre class="prettyprint source lang-html"><code>&lt;body>
+    &lt;canvas id=&quot;LIBRARY&quot;>&lt;/canvas></code></pre><h2>Basic Usage</h2><pre class="prettyprint source lang-js"><code>lib3d.init(document.getElementById(&quot;LIBRARY&quot;), 300, 300);
 
-lib3d.init(document.getElementById(&quot;LIBRARY&quot;), 300, 300);
-
-var library = lib3d.factory.createLibrary({model: 'library_0001'});
-var section = lib3d.factory.createSection({id: '3', model: 'bookshelf_0001'})
-var book1 = lib3d.factory.createBook({
-    id: '1',
-    model: 'book_0001', 
+var library = lib3d.factory.createLibrary({
+    id: '1', 
+    model: 'default'
+});
+var section = lib3d.factory.createSection({
+    id: '1', 
+    model: 'default'
+});
+var book = lib3d.factory.createBook({
+    id: '1'
+    model: 'default', 
     shelfId: '4', 
-    sectionId: '3'
+    sectionId: '1'
 });
 
 library.addSection(section);
-library.addBook(book1);
+library.addBook(book);
 lib3d.setLibrary(library);
 
 section.move(new THREE.Vector3(-0.3, 0, -2));
-book1.move(new THREE.Vector3(-0.1, -0.06, -0.046));</code></pre><h2>Documentation</h2><p><a href="http://galiaf47.github.io/lib3d/">API reference</a></p>
+book.move(new THREE.Vector3(-0.1, -0.06, -0.046));</code></pre><h2>Documentation</h2><p><a href="http://galiaf47.github.io/lib3d/">API reference</a></p>
 <h2>Contribution</h2><p>Star this repository or let me know in any other way that you use or going to use this library.</p></article>
     </section>
 
@@ -87,7 +87,7 @@ book1.move(new THREE.Vector3(-0.1, -0.06, -0.046));</code></pre><h2>Documentatio
 </div>
 
 <nav>
-    <h2><a href="index.html">Home</a></h2><h3>Modules</h3><ul><li><a href="lib3d.module_events.html">lib3d.events</a></li><li><a href="lib3d.module_factory.html">lib3d.factory</a></li><li><a href="lib3d.module_locator.html">lib3d.locator</a></li><li><a href="lib3d.module_mouse.html">lib3d.mouse</a></li><li><a href="lib3d.module_navigation.html">lib3d.navigation</a></li><li><a href="lib3d.module_preview.html">lib3d.preview</a></li><li><a href="lib3d.module_selector.html">lib3d.selector</a></li><li><a href="module-lib3d.html">lib3d</a></li></ul><h3>Classes</h3><ul><li><a href="BaseObject.html">BaseObject</a></li><li><a href="BookObject.html">BookObject</a></li><li><a href="LibraryObject.html">LibraryObject</a></li><li><a href="SectionObject.html">SectionObject</a></li><li><a href="SelectorMeta.html">SelectorMeta</a></li><li><a href="SelectorMetaDto.html">SelectorMetaDto</a></li><li><a href="ShelfObject.html">ShelfObject</a></li></ul>
+    <h2><a href="index.html">Home</a></h2><h3>Modules</h3><ul><li><a href="lib3d.module_events.html">lib3d.events</a></li><li><a href="lib3d.module_factory.html">lib3d.factory</a></li><li><a href="lib3d.module_locator.html">lib3d.locator</a></li><li><a href="lib3d.module_mouse.html">lib3d.mouse</a></li><li><a href="lib3d.module_navigation.html">lib3d.navigation</a></li><li><a href="lib3d.module_preview.html">lib3d.preview</a></li><li><a href="lib3d.module_selector.html">lib3d.selector</a></li><li><a href="module-lib3d.html">lib3d</a></li></ul><h3>Classes</h3><ul><li><a href="BaseObject.html">BaseObject</a></li><li><a href="BookObject.html">BookObject</a></li><li><a href="LibraryObject.html">LibraryObject</a></li><li><a href="SectionObject.html">SectionObject</a></li><li><a href="SelectorMeta.html">SelectorMeta</a></li><li><a href="SelectorMetaDto.html">SelectorMetaDto</a></li><li><a href="ShelfObject.html">ShelfObject</a></li></ul><h3>Global</h3><ul><li><a href="global.html#getLibrary">getLibrary</a></li><li><a href="global.html#setLibrary">setLibrary</a></li><li><a href="global.html#setSize">setSize</a></li></ul>
 </nav>
 
 <br class="clear">
